# crunch

./: .gitignore  API_Docs.md  Building.md  CMakeLists.txt  CMakeSettings.json  KnownProblems.md  License.md  Makefile.am  ProjectHome.md  README.md  Stats.md  SupportedFormats.md  TechnicalDetails.md  autogen.sh  configure.ac  cpy.bat  crn.2017.sln  license.txt  readme.txt
branches/linux64/crnlib/: crn_math.h  crnlib.cpp
branches/linux64/example1/: example1.cpp
crnlib/: CMakeLists.txt  Makefile  crn_arealist.cpp  crn_arealist.h  crn_assert.cpp  crn_assert.h  crn_buffer_stream.h  crn_cfile_stream.h  crn_clusterizer.h  crn_color.h  crn_colorized_console.cpp  crn_colorized_console.h  crn_command_line_params.cpp  crn_command_line_params.h  crn_comp.cpp  crn_comp.h  crn_console.cpp  crn_console.h  crn_core.cpp  crn_core.h  crn_data_stream.cpp  crn_data_stream.h  crn_data_stream_serializer.h  crn_dds_comp.cpp  crn_dds_comp.h  crn_dds_texture.cpp  crn_dds_texture.h  crn_decomp.cpp  crn_dxt.cpp  crn_dxt.h  crn_dxt1.cpp  crn_dxt1.h  crn_dxt5a.cpp  crn_dxt5a.h  crn_dxt_endpoint_refiner.cpp  crn_dxt_endpoint_refiner.h  crn_dxt_fast.cpp  crn_dxt_fast.h  crn_dxt_hc.cpp  crn_dxt_hc.h  (+100 more)
crunch/: CMakeLists.txt  corpus_gen.cpp  corpus_gen.h  corpus_test.h  crunch.2008.vcxproj  crunch.2008.vcxproj.filters  crunch.cpp
emscripten/: CMakeLists.txt  crn.cpp  crunch_lib.cpp
example1/: CMakeLists.txt  example1.2017.vcxproj  example1.2017.vcxproj.filters  example1.cpp
example2/: CMakeLists.txt  example2.2017.vcxproj  example2.2017.vcxproj.filters  example2.cpp
example3/: CMakeLists.txt  example3.2017.vcxproj  example3.2017.vcxproj.filters  example3.cpp
inc/: crn_decomp.h  crnlib.h
tags/v100/: license.txt
tags/v100/crnlib/: crn_command_line_params.h  crn_comp.cpp  crn_comp.h  crn_condition_var.cpp  crn_condition_var.h  crn_console.h  crn_core.cpp  crn_data_stream.h  crn_dds_comp.h  crn_dds_texture.h  crn_dxt1.h  crn_dxt5a.cpp  crn_dxt_endpoint_refiner.cpp  crn_dxt_image.cpp  crn_dxt_image.h  crn_huffman_codes.cpp  crn_image.h  crn_lzma_codec.cpp  crn_lzma_codec.h  crn_pixel_format.h  crn_qdxt1.cpp  crn_rand.cpp  crn_rect.h  crn_stb_image.cpp  crn_strutils.cpp  crn_strutils.h  crn_symbol_codec.cpp  crn_task_pool.cpp  crn_texture_file_types.cpp  crn_utils.h  crn_value.h  crn_vector.cpp  crn_win32_file_utils.cpp  crn_winhdr.h  crnlib.cpp
tags/v100/crunch/: crunch.2008.vcproj  crunch.cbp  crunch.cpp
tags/v100/example2/: example2.2008.vcproj
tags/v100/inc/: crn_decomp.h  crnlib.h
tags/v101/: readme.txt
tags/v101/crnlib/: crn_arealist.cpp  crn_core.cpp  crn_core.h  crn_dds_texture.cpp  crn_dxt.h  crn_dxt_hc.h  crn_dynamic_wstring.h  crn_hash_map.h  crn_helpers.h  crn_mutex.h  crn_qdxt5.cpp  crn_rand.h  crn_texture_comp.h  crn_texture_conversion.h  crn_threaded_resampler.h  crn_value.cpp  crn_vec_interval.h  crn_win32_console.h  crn_win32_timer.cpp  crn_win32_timer.h  lzma_Types.h
tags/v101/example2/: example2.cpp
tags/v101/inc/: crn_decomp.h
tags/v103/crnlib/: crn_colorized_console.cpp  crn_console.cpp  crn_dds_comp.h  crn_dxt.cpp  crn_dxt_hc.cpp  crn_dxt_image.cpp  crn_dxt_image.h  crn_image_utils.cpp  crn_image_utils.h  crn_pixel_format.cpp  crn_pixel_format.h  crn_rand.cpp  crn_rand.h  crn_resampler.cpp  crn_texture_file_types.cpp  crn_threading_win32.cpp  crn_traits.h  crn_tree_clusterizer.h  crn_utils.h  crn_vector.h  crnlib_linux.cbp
tags/v103/crunch/: crunch.cbp  crunch.cpp  crunch_linux.cbp
tags/v103/inc/: crn_decomp.h  dds_defs.h
tags/v104/: readme.txt
trunk/: license.txt  readme.txt
trunk/crnlib/: crn_cfile_stream.h  crn_color.h  crn_command_line_params.cpp  crn_command_line_params.h  crn_console.cpp  crn_core.cpp  crn_core.h  crn_data_stream_serializer.h  crn_dds_texture.cpp  crn_dxt.h  crn_dxt1.cpp  crn_dxt_fast.cpp  crn_dxt_hc.cpp  crn_dynamic_wstring.cpp  crn_event.h  crn_file_utils.cpp  crn_mem.cpp  crn_pixel_format.cpp  crn_platform.cpp  crn_platform.h  crn_qdxt1.cpp  crn_qdxt1.h  crn_qdxt5.cpp  crn_qdxt5.h  crn_spinlock.h  crn_stb_image.cpp  crn_task_pool.h  crn_texture_conversion.cpp  crn_texture_conversion.h  crn_texture_file_types.h  crn_threading_pthreads.cpp  crn_threading_pthreads.h  crn_traits.h  crn_types.h  crn_utils.cpp  crn_win32_find_files.cpp  crn_win32_find_files.h  crn_win32_threading.cpp  crn_win32_threading.h  crnlib.2008.vcproj  (+5 more)
trunk/crunch/: crunch.cbp  crunch.cpp
trunk/example2/: example2.cpp
trunk/example3/: example3.cpp
trunk/inc/: crn_decomp.h  crnlib.h
wiki/: API_Docs.wiki  Building.wiki  KnownProblems.wiki  License.wiki  PageName.wiki  Stats.wiki  SupportedFormats.wiki  TechnicalDetails.wiki  crn_stats_dec_29.htm
